--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/open-sans": "^4.5.14",
+    "@fontsource/raleway": "^4.5.12",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react-swc": "^3.3.0",
     "axios": "^1.4.0",
