--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/raleway": "^4.5.12",
     "@types/styled-components": "^5.1.26",
+    "@types/zxcvbn": "^4.4.1",
     "@vitejs/plugin-react-swc": "^3.3.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
@@ -29,7 +30,8 @@
     "recoil": "^0.7.7",
     "styled-components": "^5.3.10",
     "vite-tsconfig-paths": "^4.2.0",
-    "zustand": "^4.3.8"
+    "zustand": "^4.3.8",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -42,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
