--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/raleway": "^4.5.12",
+    "@thiagocarmona/cep-aberto": "^1.0.4",
     "@types/styled-components": "^5.1.26",
     "@types/zxcvbn": "^4.4.1",
     "@vitejs/plugin-react-swc": "^3.3.0",
     "axios": "^1.4.0",
+    "chakra-ui-steps": "^2.1.0",
     "date-fns": "^2.30.0",
+    "findcep": "^1.0.2",
     "framer-motion": "^10.12.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
+    "react-via-cep": "^2.0.8",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.10",
     "vite-tsconfig-paths": "^4.2.0",
